project is done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           </div>
       </div>
     </nav>
+    <!-- test -->
 
+    <!-- lolo -->
     <div class="container header-sqooz">
 
     </div>
